# ai-gcm

./: .gitignore  Makefile  Package.resolved  Package.swift  README.md  pyproject.toml
Sources/ai-gcm/: MainApp.swift
Sources/ai-gcm/Models/: CommitMessage.swift
Sources/ai-gcm/Utils/: AIUtils.swift  GitUtils.swift
ai_gcm/: cli.py
ai_gcm/commands/: __init__.py  commit.py  generate.py
ai_gcm/core/: utils.py
bak/: LICENSE  README.md
bak/ai_gcm/: __init__.py  cli.py
bak/ai_gcm/commands/: version.py
bak/ai_gcm/core/: models.py
