[tool.poetry]
name = "ai-gcm"
version = "1.0.1"
description = "AI powered Git Commit Message Generator"
authors = ["Rahul Katariya <rahulkatariya@me.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zuhlke/ai-gcm"
repository = "https://github.com/zuhlke/ai-gcm"
keywords = ["git", "commit", "ai", "ollama"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
]
packages = [
    { include = "ai_gcm" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
ollama = "^0.1.6"
pydantic = "^2.0.0"

[tool.poetry.scripts]
ai-gcm = "ai_gcm.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
